# nexivo-vein-mvp

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: AI_CTO_CHARTER.md  AI_TEAM_PROFILES.md  BIOMETRIC_METRICS_PLAN.md  CODE_NAMES_STORY_POST.md  CTO_MENTORSHIP_ROADMAP.md  CTO_TEAM_EXPANSION_REVIEW.md  DEMO_STORY.md  FIRST_REAL_TEST_PROTOCOL.md  GITHUB_TRACKING.md  HARDWARE_SETUP_PLAN.md  HARDWARE_SHOPPING_LIST.md  IMAGE_QUALITY_SCORE_PLAN.md  KVKK_AND_TEST_ETHICS.md  LINKEDIN_AI_TEAM_LAUNCH.md  LINKEDIN_CONTENT_CALENDAR.md  MVP_DONANIM_VE_YOL_HARITASI.md  OPEN_DATASET_PLAN.md  OPEN_DATASET_RESULTS.md  PRE_HARDWARE_SPRINT.md  PROLINE_COMPETITIVE_ANALYSIS.md  TEAM_RETROSPECTIVE.md  TEAM_ROLES_AND_TASKS.md  TECHNICAL_MVP_ONE_PAGER.md  VOLUNTEER_TEST_CONSENT.md  WEEKLY_TEAM_RHYTHM.md
scripts/: analyze_scores.py  download_mmcbnu_subset.py  enroll.py  evaluate_folder_dataset.py  generate_synthetic_dataset.py  prepare_mmcBnu_subset.py  process_image.py  render_linkedin_assets.py  smoke_test.py  verify.py
src/nexivo_vein_mvp/: __init__.py  pipeline.py
