[project]
name = "nexivo-vein-mvp"
version = "0.1.0"
description = "NEXIVO NIR damar biyometrisi teknik MVP başlangıç pipeline'ı"
requires-python = ">=3.10"
dependencies = [
  "opencv-python>=4.9",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "typer>=0.12",
  "rich>=13.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

